v0.07.0
* Upgraded to Janino 2.5.3
* Upgraded to Janino 2.5.2
* Added sun light to SunSkyLight - modified LightSource interface slightly
* Added support for "noinstance" keyword
* Unified instance handling in .sc parser
* Added -pathgi command line argument
* Added basic animation support
* Added SunSkyLight
* Added QuadMesh primitive type (using bilinear patches)
* Added real sphere lights
* Console display now outputs to stderr to allow stdout to be used for output redirection
* Added fisheye lens to .sc parser
* Added imgpipe display compatible with mental ray imgpipe protocol
* Experimental fix to light bleeding problem
* Removed -accel command line option
* Deprecated use of accel keyword in .sc files - the default is usually best
* Moved accel into an option parameter
* Added -filter command line option
* When baking a lightmap without viewdep, a camera is not required in the scene
* Added -bakedir command line option
* Added baking.viewdep option to control lightmap baking style
* Lightmap baking can now either be view-dependent (to the current camera) or orthographic (perpendicular to the point being shaded)
* Added XYZColor class to represent colors with CIE coordinates
* Rengereated golden images for Benchmark data
* Fixed a subtle problem with float/int constructors for the Color class
* Added lightmap baking - only triangular meshes are supported at the moment
* Renamed DLASurface to ParticleSurface
* SCParser: Made all the options in the image block optional
* Added fake spherical lights (approximated by point lights - using the trick from the Lightcuts paper)
* Bug fix to RA2Parser (was passing fov argument to camera incorectly)
* Added a method to dump Mesh objects to .obj files (usefull for procedural geometry debugging)
* Added DLASurface for efficient rendering of large sets of spheres
* Split Camera into CameraLens (which is an interface to generate rays in camera space) and an internal Camera class which rotates the rays into world space